--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -3,13 +3,13 @@
 import FooterSocialLink from "@components/ui/links/FooterSocialLink.astro";
 import EmailFooterInput from "@components/ui/forms/input/EmailFooterInput.astro";
 import enStrings from "@utils/navigation.ts";
-import frStrings from "@utils/fr/navigation.ts";
 import Icon from "@components/ui/icons/Icon.astro";
 import BrandLogo from "@components/BrandLogo.astro";
+import EB from "@/components/EB.astro";
 import { SITE } from "@data/constants";
 
 // Select the correct translation based on the page's lang prop:
-const strings = Astro.currentLocale === "fr" ? frStrings : enStrings;
+const strings = enStrings;
 
 // Define the variables that will be used in this component
 const sectionThreeTitle: string = Astro.currentLocale === "fr" ? "Rester à jour" : "Stay up to date";
@@ -25,7 +25,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Erstel
     <div class="grid grid-cols-2 gap-6 md:grid-cols-4 lg:grid-cols-5">
       <div class="col-span-full lg:col-span-1">
         <!-- Brand Logo -->
-        <BrandLogo class="h-auto w-32" />
+        <EB class="h-auto w-32" />
       </div>
       <!-- An array of links for Product and Company sections -->
       {
@@ -43,11 +43,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Erstel
                   >
                     {link.name}
                   </a>
-                  {section.section === "Company" && index === 2 ? (
-                    <span class="ms-1 inline rounded-lg bg-blue-500 px-2 py-1 text-xs font-bold text-neutral-50">
-                      We're hiring!
-                    </span>
-                  ) : null}
+
                 </li>
               ))}
             </ul>
@@ -55,7 +51,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Erstel
         ))
       }
 
-      <div class="col-span-2">
+      <!-- <div class="col-span-2">
         <h3 class="font-bold text-neutral-800 dark:text-neutral-200">
           {sectionThreeTitle}
         </h3>
@@ -66,7 +62,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Erstel
             {sectionThreeContent}
           </p>
         </form>
-      </div>
+      </div> -->
     </div>
 
     <div
