--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,10 +57,10 @@ const avatarSrcs: Array<string> = [
   /> -->
 
   <FeaturesGeneral
-    title="Meeting Industry Demands"
-    subTitle="At ScrewFast, we tackle the unique challenges encountered in the hardware and construction sectors. From cutting-edge tools to expert services, we're dedicated to helping you overcome obstacles and achieve your goals."
+    title="Unsere Leistung im Schnellüberblick"
+    subTitle="Unser Angebot rund ums Thema Bauen"
     src={featureImage}
-    alt="ScrewFast products in floating boxes"
+    alt="Eichhbau services in floating boxes"
     features={features}
   />
 
