--- a/src/components/sections/features/FeaturesGeneral.astro
+++ b/src/components/sections/features/FeaturesGeneral.astro
@@ -11,6 +11,7 @@ interface Feature {
 }
 
 interface Props {
+
   title?: string;
   subTitle?: string;
   features?: Feature[];
@@ -48,7 +49,7 @@ const { title, subTitle, src, alt, features } = Astro.props;
       <h2
         class="text-balance text-2xl font-bold text-neutral-800 dark:text-neutral-200 md:text-3xl"
       >
-        {title}
+        <Fragment set:html={title} />
       </h2>
       <!-- Rendering subtitle -->
       {
