--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const avatarSrcs: Array<string> = [
   /> -->
 
   <FeaturesGeneral
-    title="Unsere Leistung im Schnellüberblick"
+    title=`Unsere <span class="text-blue-400 dark:text-blue-200">Leistungen</span> im Schnellüberblick`
     subTitle="Unser Angebot rund ums Thema Bauen"
     src={featureImage}
     alt="Eichhbau services in floating boxes"
@@ -65,10 +65,10 @@ const avatarSrcs: Array<string> = [
   />
 
   <FeaturesNavs
-    title=`Customize <span class="text-yellow-500 dark:text-blue-400">ScrewFast</span>'s offerings to perfectly suit your hardware and construction needs.`
+    title=`Ihre Erwartungen, unsere <span class="text-blue-400 dark:text-blue-200">Grundsätze</span>`
     tabs={[
       {
-        heading: "Cutting-Edge Tools",
+        heading: "Professionelle & Persönliche Betreuung",
         content:
           "Empower your projects with ScrewFast's cutting-edge tools. Experience enhanced efficiency in construction management with our sophisticated automated solutions.",
         svg: "tools",
@@ -77,7 +77,7 @@ const avatarSrcs: Array<string> = [
         first: true,
       },
       {
-        heading: "Intuitive Dashboards",
+        heading: "Transparenz",
         content:
           "Navigate with ease using ScrewFast's intuitive dashboards. Set up and oversee your projects seamlessly, with user-friendly interfaces designed for quick and effective workflow management.",
         svg: "dashboard",
@@ -86,7 +86,7 @@ const avatarSrcs: Array<string> = [
         second: true,
       },
       {
-        heading: "Robust Features",
+        heading: "Termintreue",
         content:
           "Minimize complexity, maximize productivity. ScrewFast's robust features are engineered to streamline your construction process, delivering results that stand out for their excellence.",
         svg: "house",
@@ -96,7 +96,7 @@ const avatarSrcs: Array<string> = [
     ]}
   />
 
-  <TestimonialsSection
+  <!-- <TestimonialsSection
     title="Fast-Track Your Projects"
     subTitle="At ScrewFast, we ensure a swift start with instant account setup. Experience the speed of construction redefined."
     ;
@@ -131,15 +131,16 @@ const avatarSrcs: Array<string> = [
         description: "quicker assembly using innovative fastening solutions",
       },
     ]}
-  />
+  /> -->
 
   <!-- <PricingSection pricing={pricing} /> -->
 
-  <FAQ title="Frequently<br />asked questions" faqs={faqs} />
+  <!-- <FAQ title="Frequently<br />asked questions" faqs={faqs} /> -->
 
   <HeroSectionAlt
-    title="Let's Build Together"
-    subTitle="ScrewFast is an open-source template, meticulously crafted with Astro, Tailwind CSS, and Preline UI frameworks."
-    url="https://github.com/mearashadowfax/ScrewFast"
+    title=`Gehen wir Ihr nächstes <span class="text-blue-400 dark:text-blue-200">Projekt</span> zusammen an`
+    subTitle="Kontaktieren Sie uns und vereinbaren Sie ein persönliches Gespräch"
+    url="/contact"
+    
   />
 </MainLayout>
