feat: updated main layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,27 +57,27 @@ const avatarSrcs: Array<string> = [
   /> -->
 
   <FeaturesGeneral
-    title=`Unsere <span class="text-blue-400 dark:text-blue-200">Leistungen</span> im Schnellüberblick`
-    subTitle="Unser Angebot rund ums Thema Bauen"
+    title=`Ihre Erwartungen, unsere <span class="text-blue-400 dark:text-blue-200">Grundsätze</span>`
+    subTitle="Das können Sie von uns erwarten"
     src={featureImage}
-    alt="Eichhbau services in floating boxes"
+    alt="Eichhornbau principles in floating boxes"
     features={features}
   />
 
   <FeaturesNavs
-    title=`Ihre Erwartungen, unsere <span class="text-blue-400 dark:text-blue-200">Grundsätze</span>`
+    title=`Unsere <span class="text-blue-400 dark:text-blue-200">Leistungen</span> im Schnellüberblick`
     tabs={[
       {
-        heading: "Professionelle & Persönliche Betreuung",
+        heading: "Bauleitung",
         content:
-          "Empower your projects with ScrewFast's cutting-edge tools. Experience enhanced efficiency in construction management with our sophisticated automated solutions.",
-        svg: "tools",
+          "Wir bieten Ihnen eine zuverlässige Bauleitung mit klarer Koordination und sorgfältiger Qualitätskontrolle. So bleibt Ihr Projekt von Anfang bis Ende in besten Händen. Vertrauen Sie auf eine reibungslose Abwicklung und transparente Kommunikation.",
+        svg: "groups",
         src: tools,
         alt: "Yellow and black heavy equipment on brown grass field",
         first: true,
       },
       {
-        heading: "Transparenz",
+        heading: "Bauleistung",
         content:
           "Navigate with ease using ScrewFast's intuitive dashboards. Set up and oversee your projects seamlessly, with user-friendly interfaces designed for quick and effective workflow management.",
         svg: "dashboard",
@@ -86,10 +86,10 @@ const avatarSrcs: Array<string> = [
         second: true,
       },
       {
-        heading: "Termintreue",
+        heading: "Garten & Landschaftsbau",
         content:
           "Minimize complexity, maximize productivity. ScrewFast's robust features are engineered to streamline your construction process, delivering results that stand out for their excellence.",
-        svg: "house",
+        svg: "tree",
         src: construction,
         alt: "Gray metal building frame near tower crane during daytime",
       },
