added dpp & impressum

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,13 +63,6 @@ const avatarSrcs: Array<string> = [
     alt="Eichhornbau principles in floating boxes"
     features={features}
   /> -->
-  <FeaturesGeneral
-  title=`Ihre Erwartungen, unsere <span class="text-blue-400 dark:text-blue-200">Grundsätze</span>`
-  subTitle="Das können Sie von uns erwarten"
- 
-  alt="Eichhornbau principles in floating boxes"
-  features={features}
-/>
 
 
   <FeaturesNavs
@@ -87,8 +80,8 @@ const avatarSrcs: Array<string> = [
       {
         heading: "Bauleistung",
         content:
-          "Wir setzen Ihr Projekt mit Fachkompetenz und Engagement um. Von der fachgerechten Planung bis zur fertigen Umsetzung kümmern wir uns um Ihr Bauanliegen",
-        svg: "dashboard",
+          "Wir setzen Ihr Projekt mit Fachkompetenz und Engagement um. Von der fachgerechten Planung bis zur fertigen Umsetzung kümmern wir uns um Ihr Bauanliegen.",
+        svg: "house",
         src: construction,
         alt: "A screenshot or graphic representation of the intuitive dashboard",
         second: false,
@@ -103,6 +96,14 @@ const avatarSrcs: Array<string> = [
       },
     ]}
   />
+
+  <FeaturesGeneral
+  title=`Ihre Erwartungen, unsere <span class="text-blue-400 dark:text-blue-200">Grundsätze</span>`
+  subTitle="Das können Sie von uns erwarten"
+ 
+  alt="Eichhornbau principles in floating boxes"
+  features={features}
+/>
 
   <!-- <TestimonialsSection
     title="Fast-Track Your Projects"
