--- a/src/components/ui/icons/Icon.astro
+++ b/src/components/ui/icons/Icon.astro
@@ -6,7 +6,14 @@ interface Path {
   class?: string;
 }
 
-const { name } = Astro.props;
+
+
+const { name, viewBox } = Astro.props;
+
+interface Props {
+    name: string;
+    viewBox?: string
+}
 
 let icon = (Icons as any)[name] || {};
 
