--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const avatarSrcs: Array<string> = [
 
   <HeroSection
     title=`<span class="text-blue-500 dark:text-blue-300">Eichhorn</span> Bau- & Baumanagement`
-    subTitle="Dein Partner für Baudienstleistungen"
+    subTitle="Ihr Partner für Baudienstleistungen"
     primaryBtn="Unsere Dienstleistungen"
     primaryBtnURL="/products"
     secondaryBtn="Kontakt"
