--- a/src/components/ui/blocks/StatsSmall.astro
+++ b/src/components/ui/blocks/StatsSmall.astro
@@ -9,7 +9,7 @@ interface Props {
 ---
 
 <!-- Container for title and subtitle -->
-<div>
-  <p class="text-3xl font-bold text-blue-400 dark:text-blue-300">{title}</p>
+<div class="mb-5 px-5">
+  <p class="text-2xl font-bold text-blue-400 dark:text-blue-300">{title}</p>
   <p class="mt-1 text-neutral-600 dark:text-neutral-400">{subTitle}</p>
 </div>
