cleaned up project folder

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,19 +13,19 @@ const pageTitle: string = `Kontakt | ${SITE.title}`;
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/contact",
-    "url": "https://screwfast.uk/contact",
+    "@id": "https://eichhornbau.de/contact",
+    "url": "https://eichhornbau.de/contact",
     "name": "Kontakt",
     "description":
-      "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
+      "Haben Sie Fragen oder wollen das nächste Projekt besprechen? Sprechen Sie uns an, und lassen Sie uns die perfekte Lösung finden!.",
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://screwfast.uk",
-      "name": "ScrewFast",
+      "url": "https://eichhornbau.de",
+      "name": "Eichhornbau",
       "description":
-        "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
+        "Eichhornbau ist ihr zuverlässiger Partner rund um das Thema Bauen",
     },
-    "inLanguage": "en-US"
+    "inLanguage": "de-DE"
   }}
 >
   <ContactSection />
