--- a/src/pages/company.astro
+++ b/src/pages/company.astro
@@ -37,7 +37,7 @@ interface Article {
 const articles: Article[] = [
   {
     isRightSection: true,
-    title: "Bauleitung",
+    title: "Ralf Eichhorn",
     subTitle:
       "Das Management eines Bauprojekts kann überwältigend sein. Mit unseren professionellen Beratungsdiensten begleiten wir Sie durch jede Phase und stellen sicher, dass Sie fundierte Entscheidungen treffen. Egal, ob Sie ein Heimwerker oder ein erfahrener Bauunternehmer sind, wir bieten Ihnen eine maßgeschneiderte Leitung Ihres Bauvorhabens an. Zusammen mit Ihnen planen wir den Bauablauf, koordinieren Dienstleister und stimmen uns mit dem Bauträger ab. Bei Problemstellungen stehen wir Ihnen beratend zur Verfügung.",
     single: false,
@@ -69,7 +69,7 @@ const articles: Article[] = [
   },
 ];
 
-const pageTitle: string = `Dienstleistungen | ${SITE.title}`;
+const pageTitle: string = `Unternehmen | ${SITE.title}`;
 ---
 
 <MainLayout
@@ -79,9 +79,9 @@ const pageTitle: string = `Dienstleistungen | ${SITE.title}`;
     "@type": "WebPage",
     "@id": "https://eichhornbau.de/services",
     url: "https://eichhornbau.de/services",
-    name: "Dienstleistungen | Eichhornbau",
+    name: "Unternehmen | Eichhornbau",
     description:
-      "Mit über 30 Jahren Erfahrung in der Baubranche sind wir der richtige Ansprechpartner für Ihr Bauanliegen. Ob Großprojekt oder persönliches Vorhaben, wir unterstützen Sie. Überzeugen Sie sich untenstehend von unserem Dienstleistungsportfolio.",
+      "Uniting expertise with your vision, Eichhornbau provides exceptional service and comprehensive solutions in the hardware and construction industry, from consultation to project completion.",
     isPartOf: {
       "@type": "WebSite",
       url: "https://eichhornbau.de",
@@ -93,13 +93,7 @@ const pageTitle: string = `Dienstleistungen | ${SITE.title}`;
   }}
 >
   <!--MainSection is the introductory section of the page, it also contains a CTA button-->
-  <MainSection
-    title="Verbinden Sie unsere Expertise mit Ihrer Vision"
-    subTitle="Mit über 30 Jahren Erfahrung in der Baubranche sind wir der richtige Ansprechpartner für Ihr Bauanliegen. Ob Großprojekt oder persönliches Vorhaben, wir unterstützen Sie. Überzeugen Sie sich untenstehend von unserem Dienstleistungsportfolio."
-    btnExists={true}
-    btnTitle="Kontaktieren Sie uns"
-    btnURL="/contact"
-  />
+
   <!-- RightSection and LeftSection contain details about various services along with pertinent imagery.
   They alternate for variety in design.
   The 'btnExists' property is used to toggle the display of a button in these sections.
@@ -139,35 +133,5 @@ const pageTitle: string = `Dienstleistungen | ${SITE.title}`;
  
 
 
-  <FeaturesTimeline
-  title="Ihr Anliegen, unser Vorgehen"
-  subTitle="Unsere Dienstleistungen haben Sie überzeugt? Sie planen eine Anfrage über die Website oder E-Mail an uns zu stellen? Damit ihr individuelles Vorhaben gleich von Anfang bestens Betreut wird, sieht ein typischer Vorplanungsprozess bei uns so aus."
-    events={[
-      {
-        heading: "Vorbereitung",
-        content: "Auf Basis Ihrer Anfrage stecken wir zunächst grob die Parameter ab, um uns mit einer fundierten Schätzung innerhalb von wenigen Werktagen bei Ihnen zu melden. ",
-        svg: "envelope"
-      },
-      {
-        heading: "Vorbesprechung",
-        content: "Wir besprechen mit Ihnen die Details Ihres Anliegens, planen weitere Schritte und stellen Rückfragen.",
-        svg: "chatbubble"
-      },
-      {
-        heading: "Feinplanung",
-        content: "Der persönliche Kontakt ist uns wichtig. Wir schauen uns mit Ihnen gemeinsam das Bauvorhaben an und klären Feinheiten, um Ihnen ein präzises Angebot zu stellen.",
-        svg: "magification"
-      },
-      {
-        heading: "Angebot",
-        content: "Wir stellen Ihnen ein sauber aufgeschlüsseltes Angebot. Dazu zählen einen Mengengerüst und eine Baukalkulation.",
-        svg: "pen"
-      },
-      {
-        heading: "Umsetzung",
-        content: "Wir setzen den Plan in die Tat um. Im Bauverlauf nehmen wir Sie mit und besprechen wichtige Entscheidungen und Meilensteine mit Ihnen.",
-        svg: "home"
-      },
-    ]}
-  />
+
 </MainLayout>
