cleaned up project folder

--- a/src/pages/company.astro
+++ b/src/pages/company.astro
@@ -11,7 +11,7 @@ import FeaturesTimeline from "@/components/sections/features/FeaturesTimeline.as
 import blueprints from "@images/blueprints-image.avif";
 import personWorking from "@images/person-working.avif";
 import beforeAfter from "@images/before-after.avif";
-import constructionWorkers from "@images/construction-workers.avif";
+import profilePic from "@images/profile_pic.jpg";
 
 import excavator1 from "@images/excavator1.jpg";
 import excavator2 from "@images/excavator2.jpg";
@@ -40,8 +40,8 @@ const articles: Article[] = [
     title: "Ralf Eichhorn",
     subTitle:
       "Das Management eines Bauprojekts kann überwältigend sein. Mit unseren professionellen Beratungsdiensten begleiten wir Sie durch jede Phase und stellen sicher, dass Sie fundierte Entscheidungen treffen. Egal, ob Sie ein Heimwerker oder ein erfahrener Bauunternehmer sind, wir bieten Ihnen eine maßgeschneiderte Leitung Ihres Bauvorhabens an. Zusammen mit Ihnen planen wir den Bauablauf, koordinieren Dienstleister und stimmen uns mit dem Bauträger ab. Bei Problemstellungen stehen wir Ihnen beratend zur Verfügung.",
-    single: false,
-    imgOne: blueprints,
+    single: true,
+    imgOne: profilePic,
     imgOneAlt: "Blueprints and digital tablet with construction plans.",
     imgTwo: underConstruction,
     imgTwoAlt: "Brown and gray building under construction",
