--- a/src/components/ui/blocks/LeftSection.astro
+++ b/src/components/ui/blocks/LeftSection.astro
@@ -39,9 +39,9 @@ interface Props {
     </h2>
     <!-- The subtitle of the section -->
     <p
-      class="mb-4 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-lg"
+      class="mb-4 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-lg" set:html={subTitle}
     >
-      {subTitle}
+  
     </p>
     <!-- Conditionally render the Primary CTA button if btnExists is true -->
     {btnExists ? <PrimaryCTA title={btnTitle} url={btnURL} /> : null}
