--- a/src/components/ui/blocks/RightSection.astro
+++ b/src/components/ui/blocks/RightSection.astro
@@ -42,9 +42,9 @@ interface Props {
     </h2>
     <!-- Subtitle of the section -->
     <p
-      class="mb-4 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-lg"
+      class="mb-4 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-lg" set:html={subTitle}
     >
-      {subTitle}
+      
     </p>
     <!-- Conditional rendering of the Primary Call-To-Action button if 'btnExists' is true -->
     {btnExists ? <PrimaryCTA title={btnTitle} url={btnURL} /> : null}
