added company section

--- a/src/components/sections/misc/ContactSection.astro
+++ b/src/components/sections/misc/ContactSection.astro
@@ -90,7 +90,7 @@ const formSubTitle: string =
 
         <ContactIconBlock
           heading="Büro"
-          content="Hauptstraße 26"
+          content="Hauptstraße 26A"
           isAddressVisible={true}
           addressContent="D-04617 Kriebitzsch"
           ><Icon name="mapPin" />
