--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -81,7 +81,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Erstel
       </div>
 
       <!-- Social Brands -->
-      <div>
+      <!-- <div>
         <FooterSocialLink url={strings.socialLinks.facebook}
           ><Icon name="facebookFooter" />
         </FooterSocialLink>
@@ -101,7 +101,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Erstel
         <FooterSocialLink url={strings.socialLinks.slack}
           ><Icon name="slackFooter" />
         </FooterSocialLink>
-      </div>
+      </div> -->
     </div>
 
     <script>
