--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -39,7 +39,7 @@ const articles: Article[] = [
     isRightSection: true,
     title: "Bauleitung",
     subTitle:
-      "Das Management eines Bauprojekts kann überwältigend sein. Mit unseren professionellen Beratungsdiensten begleiten wir Sie durch jede Phase und stellen sicher, dass Sie fundierte Entscheidungen treffen. Egal, ob Sie ein Heimwerker oder ein erfahrener Bauunternehmer sind, wir bieten Ihnen eine maßgeschneiderte Leitung Ihres Bauvorhabens an. Zusammen mit Ihnen planen wir den Bauablauf, koordinieren Dienstleister und stimmen uns mit dem Bauträger ab. Bei Problemstellungen stehen wir Ihnen beratend zur Verfügung.",
+      "Das Management eines Bauprojekts kann überwältigend sein. Mit unseren professionellen Beratungsdiensten begleiten wir Sie durch jede Phase und stellen sicher, dass Sie fundierte Entscheidungen treffen. Egal, ob Sie ein Heimwerker oder ein erfahrener Bauunternehmer sind, wir bieten Ihnen eine maßgeschneiderte Leitung Ihres Bauvorhabens an. Zusammen mit Ihnen planen wir den Bauablauf, koordinieren Dienstleister und stimmen uns mit dem Bauträger ab. Ob private Bauherren, Architekten, Bauträger oder Projektierungsbüros, wir beraten Sie bei bautechnischen Fragen.",
     single: false,
     imgOne: blueprints,
     imgOneAlt: "Blueprints and digital tablet with construction plans.",
@@ -51,7 +51,7 @@ const articles: Article[] = [
     title: "Bauleistung",
     subTitle:
       "Neben der Planung von Bauprojekten, setzen wir diese auch erfolgreich um. Von kleineren Installationen bis hin zu umfangreichen Bauarbeiten bietet Eichhornbau zuverlässige Baudienstleistungen an, um Ihre Pläne in greifbare Ergebnisse zu verwandeln. Unser Spezialgebiet ist der Beton- und Erdbau. Dazu zählen die Betonierung von Boden- und Deckenelementen, die Planung und Verbau von Schalung, betonieren von Fundamenten und generelle Ausbesserungsarbeiten. Sprechen Sie uns für Ihr konkretes Anliegen direkt an.",
-    img: beforeAfter,
+    img: constructionWorkers,
     imgAlt: "Construction site before and after",
     btnExists: false,
     btnTitle: "Learn More",
