--- a/src/pages/company.astro
+++ b/src/pages/company.astro
@@ -5,12 +5,12 @@ import MainSection from "@components/ui/blocks/MainSection.astro";
 import LeftSection from "@components/ui/blocks/LeftSection.astro";
 import RightSection from "@components/ui/blocks/RightSection.astro";
 import FeaturesStats from "@components/sections/features/FeaturesStats.astro";
-import FeaturesTimeline from "@/components/sections/features/FeaturesTimeline.astro";
+import FeaturesReferences from "@/components/sections/features/FeaturesReferences.astro";
 
 // Import necessary images
 import blueprints from "@images/blueprints-image.avif";
 import personWorking from "@images/person-working.avif";
-import beforeAfter from "@images/before-after.avif";
+import company from "@images/company.jpg";
 import profilePic from "@images/profile_pic.jpg";
 
 import excavator1 from "@images/excavator1.jpg";
@@ -39,34 +39,24 @@ const articles: Article[] = [
     isRightSection: true,
     title: "Ralf Eichhorn",
     subTitle:
-      "Das Management eines Bauprojekts kann überwältigend sein. Mit unseren professionellen Beratungsdiensten begleiten wir Sie durch jede Phase und stellen sicher, dass Sie fundierte Entscheidungen treffen. Egal, ob Sie ein Heimwerker oder ein erfahrener Bauunternehmer sind, wir bieten Ihnen eine maßgeschneiderte Leitung Ihres Bauvorhabens an. Zusammen mit Ihnen planen wir den Bauablauf, koordinieren Dienstleister und stimmen uns mit dem Bauträger ab. Bei Problemstellungen stehen wir Ihnen beratend zur Verfügung.",
+      "<span style='font-style:italic'>Dipl. Ing. (FH)</span> <br> <br> Nach erfolgreichem Studium des Bergbau und Tiefbaus, began 1992 mein Einstieg in das Baugewerbe. Es folgten viele Großprojekte im Wohn- und Industrieumfeld für Radmer Bau und die PORR AG, bis 2019 der Entschluss zur Selbstständigkeit fiel. Aufbauend auf meiner umfassenden Erfahrung und meines Netzwerks in der Baubranche berate, leite und setze ich Bauprojekte um. Dabei immer mit dem eigenen Anspruch die bestmöglichen Resultate zu liefern.",
     single: true,
     imgOne: profilePic,
-    imgOneAlt: "Blueprints and digital tablet with construction plans.",
+    imgOneAlt: "Ralf Eichhorn in front of construction site.",
     imgTwo: underConstruction,
     imgTwoAlt: "Brown and gray building under construction",
   },
   {
     isRightSection: false,
-    title: "Bauleistung",
+    title: "Das Unternehmen",
     subTitle:
-      "Neben der Planung von Bauprojekten, setzen wir diese auch erfolgreich um. Von kleineren Installationen bis hin zu umfangreichen Bauarbeiten bietet Eichhornbau zuverlässige Baudienstleistungen an, um Ihre Pläne in greifbare Ergebnisse zu verwandeln. Unser Spezialgebiet ist der Beton- und Erdbau. Dazu zählen die Betonierung von Boden- und Deckenelementen, die Planung und Verbau von Schalung, betonieren von Fundamenten und generelle Ausbesserungsarbeiten. Sprechen Sie uns für Ihr konkretes Anliegen direkt an.",
-    img: beforeAfter,
-    imgAlt: "Construction site before and after",
+      "Vom kleinen Örtchen Kriebitzsch in Thüringen zur nächsten Großbaustelle. Mit der Ausgründung von Eichhorn Bau- und Baumanagement im Jahr 2020 began unsere Reise im Baugewerbe an unserem Büro- und Lagerstandort in der Hauptstraße 26A in Kriebitzsch. Von hier aus betreuen wir Kunden hauptsächlich im Raum Leipzig und Altenburg. Doch auch darüber hinaus stehen wir für Ihr Anliegen zur Verfügung. Sprechen Sie uns dazu einfach über unsere verschiedenen Kanäle an.",
+    img: company,
+    imgAlt: "Eichhornbau company emblem on office wall",
     btnExists: false,
     btnTitle: "Learn More",
-  },
-  {
-    isRightSection: true,
-    title: "Erdbauarbeiten",
-    subTitle:
-      "Wir unterstützen Sie, damit ihr Bauvorhaben auf solidem Grund steht. Vom Aushub für ein Wohnhaus, die Geländeanpassung für Gewerbeflächen oder die Vorbereitung von Baugrund wir haben das Know-How und die technischen Fähigkeiten es umzusetzen. Konkret bieten wir Bagger- und Planierarbeiten für Ihr Infrastrukturprojekt an. Sprechen Sie uns an bringen den Boden in Bewegung!",
-    single: false,
-    imgOne: excavator1,
-    imgOneAlt: "Construction workers orchestrating a project",
-    imgTwo: excavator2,
-    imgTwoAlt: "Aerial view of managed construction",
-  },
+  }
+
 ];
 
 const pageTitle: string = `Unternehmen | ${SITE.title}`;
@@ -93,6 +83,13 @@ const pageTitle: string = `Unternehmen | ${SITE.title}`;
   }}
 >
   <!--MainSection is the introductory section of the page, it also contains a CTA button-->
+
+  <MainSection
+  title="Ihr Partner für Baudienstleistungen"
+  subTitle="Bauen ist für uns Alltagsgeschäft. Mit jahrelanger Erfahrung in Bauprojekten von Wohnimmobilien und Industriebauwerken sind wir Ihr Partner für Baudienstleistungen. Erfahren Sie mehr über den Übersprung unserer Expertise, unsere Referenzprojekte und das Gesicht hinter Eichhornbau."
+  btnExists={false}
+
+/>
 
   <!-- RightSection and LeftSection contain details about various services along with pertinent imagery.
   They alternate for variety in design.
@@ -130,7 +127,37 @@ const pageTitle: string = `Unternehmen | ${SITE.title}`;
       );
     })
   }
- 
+  <FeaturesReferences
+  title="Referenzprojekte"
+  subTitle="Diese und noch mehr Bauprojekte haben wir erfolgreich umgesetzt."
+    references={[
+      {
+        heading: "Austauschen Deckenelement Gießerei",
+        content: "Austausch von tragenden Boden-/Deckenelementen. Abtragen des beschädigten Bauteils. Schalung und Betonierung des Austauschelements.",
+        date: "2020"
+      },
+      {
+        heading: "Straßenerneuerung Gießerei",
+        content: "Erneuerung des Straßenbelags",
+        date: "2022"
+      },
+      {
+        heading: "Parkhaus Leipzig",
+        content: "Führenden Bauleitungsfunktion beim Bau eines mehrstöckigen Parkhauses. Koordination von Dienstleistern und Bauherren.",
+        date: "2022"
+      },
+      {
+        heading: "Sanitärtrakt Gießerei",
+        content: "Bauträger und Koordinator bei der Erneuerung eines Sanitärtrakts im industriellen Umfeld.",
+        date: "2023"
+      },
+      {
+        heading: "Parkhaus Nürnberg",
+        content: "Führenden Bauleitungsfunktion beim Bau eines mehrstöckigen Parkhauses. Koordination von Dienstleistern und Bauherren.",
+        date: "2024"
+      },
+    ]}
+  />
 
 
 
