--- a/src/components/sections/misc/ContactSection.astro
+++ b/src/components/sections/misc/ContactSection.astro
@@ -46,7 +46,7 @@ const formSubTitle: string =
           method="POST"
           id="contact-form"
         >
-          <input type="hidden" name="access_key" value={Web3Form.key} id="web3"/>
+          <input type="hidden" name="access_key" value={Web3Form.prod_key} id="web3"/>
   
           <div class="grid gap-4">
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
