--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ const avatarSrcs: Array<string> = [
         heading: "Erdbau",
         content:
           "Wir schaffen die Grundlage für Ihr Bauprojekt. Mit präziser Anpassung der Bodenbeschaffenheit und sorgfältiger Bauvorbereitung legen wir den Grundstein für sichere und langlebige Bauwerke. Ob Bodenaushub, Geländeprofilierung oder Verdichtungsarbeiten wir sorgen für eine fachgerechte Durchführung.",
-        svg: "tree",
+        svg: "layer",
         src: tools,
         alt: "Gray metal building frame near tower crane during daytime",
       },
