feat: updated link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const avatarSrcs: Array<string> = [
     title=`<span class="text-blue-500 dark:text-blue-300">Eichhorn</span> Bau- & Baumanagement`
     subTitle="Ihr Partner für Baudienstleistungen"
     primaryBtn="Unsere Dienstleistungen"
-    primaryBtnURL="/products"
+    primaryBtnURL="/services"
     secondaryBtn="Kontakt"
     secondaryBtnURL="/contact"
     withReview={false}
